# CuPerf

./: .gitignore  AGENTS.md  CMakeLists.txt  DESIGN.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
cmake/: Options.cmake
include/cuperf/benchmarks/: ComputeThroughput.hpp  DeviceMemBandwidth.hpp  KernelLaunchOverhead.hpp  MemcpyBandwidth.hpp  Reduction.hpp  TensorCore.hpp
include/cuperf/cli/: Args.hpp  Commands.hpp
include/cuperf/core/: Benchmark.hpp  Runner.hpp  Statistics.hpp  Types.hpp
include/cuperf/cuda/: Device.hpp  Memory.hpp  Stream.hpp
include/cuperf/perfcli/benchmarks/: ComputeThroughput.hpp  DeviceMemBandwidth.hpp  Reduction.hpp  TensorCore.hpp
include/cuperf/perfcli/cli/: Args.hpp
include/cuperf/perfcli/core/: Runner.hpp  Types.hpp
include/cuperf/perfcli/cuda/: Stream.hpp
include/cuperf/util/: Error.hpp  Utils.hpp
include/perfcli/benchmarks/: ComputeThroughput.hpp  DeviceMemBandwidth.hpp  KernelLaunchOverhead.hpp  MemcpyBandwidth.hpp  Reduction.hpp  TensorCore.hpp
include/perfcli/cli/: Args.hpp  Commands.hpp
include/perfcli/core/: Benchmark.hpp  Runner.hpp  Statistics.hpp  Types.hpp
include/perfcli/cuda/: Device.hpp  Memory.hpp  Stream.hpp
include/perfcli/util/: Error.hpp
src/: main.cpp
src/benchmarks/: ComputeThroughput.cu  DeviceMemBandwidth.cu  KernelLaunchOverhead.cu  MemcpyBandwidth.cpp  Reduction.cu  TensorCore.cu
src/cli/: Args.cpp  Commands.cpp
src/core/: Benchmark.cpp  Registry.cpp  Runner.cpp  Statistics.cpp  Types.cpp
src/cuda/: Device.cpp  Stream.cpp
src/util/: Utils.cpp
tests/: CMakeLists.txt  test_statistics.cpp  test_types.cpp
